[package]
name = "cruzbit-leveldb"
version = "1.0.0"
authors = [ "Christian Smith <christian@dhp.com" ]
edition = "2021"
rust-version = "1.57.0"
description = "An interface for leveldb"
readme = "README.md"
homepage = "https://github.com/christian-smith/cruzbit-leveldb"
repository = "https://github.com/christian-smith/cruzbit-leveldb"
license = "MIT"
autotests = false

[lib]
name = "leveldb"

[[test]]
name = "tests"

[features]
default = ["cruzbit-leveldb-sys/snappy"]

[dependencies]
libc = "0.2"
cruzbit-leveldb-sys = "1.0"

[dev-dependencies]
tempdir = "0.3"

