[package]
name = "leveldb"
version = "1.0.2"
authors = [ "Andreas Gerlach <andi@appelgriebsch.com>" ]
edition = "2021"
rust-version = "1.57.0"
description = "An interface for leveldb"
readme = "README.md"
homepage = "https://github.com/appelgriebsch/leveldb"
repository = "https://github.com/appelgriebsch/leveldb"
license = "MIT"
autotests = false

[lib]
name = "leveldb"

[[test]]
name = "tests"

[features]
default = ["leveldb-sys/snappy"]

[dependencies]
libc = "0.2"
leveldb-sys = { git = "https://github.com/appelgriebsch/leveldb-sys", tag = "v1.0.2" }

[dev-dependencies]
tempdir = "0.3"